--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <body>
     <nav class="navbar navbar-expand-lg">
         <div class="container cont">
+          <a class="mujib-logo" href="https://mujib100.gov.bd/" target="_blank"><img src="images/mujib_100_logo.png" alt="mujib_100_logo" class="w-100 img-fluid"></a>
           <a class="navbar-brand" href="#"><img src="images/hunt_logo.png" alt="hunt_logo"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -58,7 +59,7 @@
               <img src="images/slide_img.jpg" alt="slide_img" class="w-100 img-fluid">
             </div>
             <div class="slide_one">
-              <img src="images/slide_img.jpg" alt="slide_img" class="w-100 img-fluid">
+              <img src="images/slide_img_t.jpg" alt="slide_img_t" class="w-100 img-fluid">
             </div>
             <div class="slide_one">
               <img src="images/slide_img.jpg" alt="slide_img" class="w-100 img-fluid">
@@ -79,27 +80,427 @@
             </row>
           </div>
         </div>
-
       </section>
       <!-- =========banner part end ======= -->
       <!-- =========about part end ======= -->
       <section id="about">
         <div class="container">
           <div class="row">
+            <div class="col-lg-7 m-auto">
+              <div class="about_head">
+                <h3>about us</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Loremsum has been the industry's standard dummy text ever since the 1500s.</p>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <!-- about_one start  -->
+            <div class="col-lg-4 m-auto">
+              <div class="about_one">
+                <div class="about_item_one">
+                  <h4>Who We Are?</h4>
+                  <p>Lorem Ipsum is simply dummy text oftheg and typesetting industry. Loremumhaseen the industry's standardmy text ever since the 1500s.</p>
+                  <div class="about_one_arrow"></div>
+                  <div class="about_one_flat"></div>
+                  <div class="about_one_cercle"></div>
+                  <div class="about_one_dots"></div>
+                </div>
+              </div>
+            </div>
+             <!-- about_one end  -->
+          </div>
+          <div class="row">
+            <!-- about_two start  -->
+            <div class="col-lg-4">
+              <div class="about_two">
+                <div class="about_item_two">
+                  <h4>Who We ?</h4>
+                  <p>Lorem Ipsum is simply dummy text oftheg and  namtypesetting industry. Loremumhaseen the  my naindustry's standardmy text ever since the 1500s of the end.</p>
+                  <div class="about_two_arrow"></div>
+                  <div class="about_two_cercle"></div>
+                  <div class="about_two_flat"></div>
+                  <div class="about_two_dots"></div>
+                </div>
+              </div>
+            </div>
+            <!-- about_two end  -->
+            <!-- about_img_part start-->
+            <div class="col-lg-4 m-auto">
+              <div class="about_img_part">
+                <div class="about_img_circle">
+                  <div class="about_img_circle_img">
+                    <img src="images/about_img.png" alt="about_img" class="w-100 img-fluid">
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- about_img_part end-->
+            <!-- about_three start-->
+            <div class="col-lg-4 m-auto">
+              <div class="about_three">
+                <div class="about_item_three">
+                  <h4>Who We do?</h4>
+                  <p>Lorem Ipsum is simply dummy text oftheg and typesetting industry. Loremumhaseen the nmy ustry's standardmy text ever since the my nam end of 1500s.</p>
+                  <div class="about_three_arrow"></div>
+                  <div class="about_three_cercle"></div>
+                  <div class="about_three_flat"></div>
+                  <div class="about_three_dots"></div>
+                </div>
+              </div>
+            </div>
+            <!-- about_three end-->
+          </div>
+          <div class="row">
+            <!-- about_four start  -->
+            <div class="col-lg-4 m-auto">
+              <div class="about_four">
+                <div class="about_item_four">
+                  <h4>Why Choose Us?</h4>
+                  <p>Lorem Ipsum is simply dummy text oftheg and typesetting industry. Loremumhaseen the industry's standardmy text ever since the 1500s.</p>
+                  <div class="about_four_arrow"></div>
+                  <div class="about_four_flat"></div>
+                  <div class="about_four_cercle"></div>
+                  <div class="about_four_dots"></div>
+                </div>
+              </div>
+            </div>
+             <!-- about_four end  -->
+          </div>
+        </div>
+      </section>
+      <!-- =========about part end ======= -->
+      <!-- =========portfolio part start ======= -->
+      <section id="portfolio">
+        <div class="port_overlay">
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-7 m-auto">
+                <div class="portfolio_head">
+                  <h3>Our Portfolio</h3>
+                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Loremsum has been the industry's standard dummy text ever since the 1500s.</p>
+                </div>
+              </div>
+            </div>
+            <!-- folio images part start  -->
+            <div class="row">
+               <!-- folio images one/two start  -->
+              <div class="col-lg-3">
+                <div class="port_img_part_one">
+                  <div class="port_img_one">
+                    <img src="images/port_img_one.jpg" alt="port_img_one" class="w-100 img-fluid">
+                    <div class="port_img_one_olay">
+                      <div class="port_olay_icon">
+                        <i class="fa fa-search-plus" aria-hidden="true"></i>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="port_img_two">
+                    <img src="images/port_img_two.jpg" alt="port_img_two" class="w-100 img-fluid">
+                    <div class="port_img_two_olay">
+                      <div class="port_olay_icon">
+                        <i class="fa fa-search-plus" aria-hidden="true"></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+                <!-- folio images one/two end  -->
+                 <!-- folio images three/four start  -->
+              <div class="col-lg-3">
+                <div class="port_img_part_one">
+                  <div class="port_img_one">
+                    <img src="images/port_img_three.jpg" alt="port_img_three" class="w-100 img-fluid">
+                    <div class="port_img_one_olay">
+                      <div class="port_olay_icon">
+                        <i class="fa fa-search-plus" aria-hidden="true"></i>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="port_img_two">
+                    <img src="images/port_img_four.jpg" alt="port_img_four" class="w-100 img-fluid">
+                    <div class="port_img_two_olay">
+                      <div class="port_olay_icon">
+                        <i class="fa fa-search-plus" aria-hidden="true"></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+                <!-- folio images three/four end  -->
+                <!-- folio images five/six start  -->
+              <div class="col-lg-3">
+                <div class="port_img_part_one">
+                  <div class="port_img_one">
+                    <img src="images/port_img_five.jpg" alt="port_img_five" class="w-100 img-fluid">
+                    <div class="port_img_one_olay">
+                      <div class="port_olay_icon">
+                        <i class="fa fa-search-plus" aria-hidden="true"></i>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="port_img_two">
+                    <img src="images/port_img_six.jpg" alt="port_img_six" class="w-100 img-fluid">
+                    <div class="port_img_two_olay">
+                      <div class="port_olay_icon">
+                        <i class="fa fa-search-plus" aria-hidden="true"></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+                <!-- folio images five/six end  -->
+                <!-- folio images seven/eight start  -->
+              <div class="col-lg-3">
+                <div class="port_img_part_one">
+                  <div class="port_img_one">
+                    <img src="images/port_img_seven.jpg" alt="port_img_seven" class="w-100 img-fluid">
+                    <div class="port_img_one_olay">
+                      <div class="port_olay_icon">
+                        <i class="fa fa-search-plus" aria-hidden="true"></i>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="port_img_two">
+                    <img src="images/port_img_eight.jpg" alt="port_img_eight" class="w-100 img-fluid">
+                    <div class="port_img_two_olay">
+                      <div class="port_olay_icon">
+                        <i class="fa fa-search-plus" aria-hidden="true"></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+                <!-- folio images seven/eight end  -->
+            </div>
+            <!-- folio images part end  -->
+          </div>
+        </div>
+      </section>
+      <!-- =========portfolio part end ======= -->
+      <!-- =========services part start ======= -->
+      <section id="services">
+        <div class="container">
+          <div class="row">
             <div class="col-lg-8 m-auto">
+              <div class="service_head">
+                <div class="service_head_text">
+                  <h3>Our Services</h3>
+                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Loremsum has been the industry's standard dummy text ever since the 1500s.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- services head end  -->
+          <!-- services slide start  -->
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="timeline">
+                <ul>
+                  <!-- list one start -->
+                  <li>
+                    <div class="web_text_right">
+                      <h3>WEb Design</h3>
+                    </div>
+                    <div class="web_text_right">
+                      <p>Lorem Ipsum is simply dummy text of the printing and typtting industry. Lorem Ipsum has been the industry's standard y text ever since the 1500s, when an unknown printer took a galleye and scrambled it to make a type specimen book. It has surve nothing is impossible centuries.</p>
+                    </div>
+                  </li>
+                  <!-- list one end -->
+                </ul>
+              </div>
+          </div>
+           <!-- services slide start  -->
+        </div>
+      </section>
+      <!-- =========services part end ======= -->
+      <!-- =========pricing part sart ======= -->
+      <section id="pricing">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-8 m-auto">
+              <div class="service_head">
+                <div class="service_head_text">
+                  <h3>Pricing Plan</h3>
+                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Loremsum has been the industry's standard dummy text ever since the 1500s.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <!-- selver part start -->
+            <div class="col-lg-4">
+              <div class="silver">
+                <div class="silver_pos">
+                  <div class="silver_pos_txt">
+                   <h3>$ 29</h3>
+                   <p>Per Month</p>
+                  </div>
+                </div>
+                <!-- selver_top start -->
+                <div class="silver_top">
+                  <h4>Silver</h4>
+                </div>
+                 <!-- selver_top end -->
+                <!-- selver_mid start -->
+                <div class="silver_mid">
+                  <p>Android Application</p>
+                  <p>ios Application</p>
+                  <p>UX/UI Designs</p>
+                  <p>Wordpress Develope</p>
+                  <p class="pb">x</p>
+                </div>
+                 <!-- selver_mid end -->
+                 <!-- selver_btm start -->
+                 <div class="silver_btm">
+                  <h4>Join Now</h4>
+                 </div>
+                 <!-- silver_btm end -->
+              </div>
+            </div>
+            <!--==== selver part end ====-->
+             <!--==== golden part start ====-->
+             <div class="col-lg-4">
+              <div class="silver">
+                <div class="silver_pos">
+                  <div class="silver_pos_txt">
+                   <h3>$ 69</h3>
+                   <p>Per Month</p>
+                  </div>
+                </div>
+                <!-- golden_top start -->
+                <div class="silver_top">
+                  <h4>Golden</h4>
+                </div>
+                 <!-- golden_top end -->
+                <!-- golden_mid start -->
+                <div class="silver_mid">
+                  <p>Android Application</p>
+                  <p>ios Application</p>
+                  <p>UX/UI Designs</p>
+                  <p>Wordpress Develope</p>
+                  <p class="pb">X</p>
+                </div>
+                 <!-- golden_mid end -->
+                 <!-- golden_btm start -->
+                 <div class="silver_btm">
+                  <h4>Join Now</h4>
+                 </div>
+                 <!-- golden_btm end -->
+              </div>
+            </div>
+            <!--==== golden part end ====-->
+             <!--==== platinum part start ====-->
+             <div class="col-lg-4">
+              <div class="silver">
+                <div class="silver_pos">
+                  <div class="silver_pos_txt">
+                   <h3>$ 89</h3>
+                   <p>Per Month</p>
+                  </div>
+                </div>
+                <!-- platinum_top start -->
+                <div class="silver_top">
+                  <h4>Platinum</h4>
+                </div>
+                 <!-- platinum_top end -->
+                <!-- platinum_mid start -->
+                <div class="silver_mid">
+                  <p>Android Application</p>
+                  <p>ios Application</p>
+                  <p>UX/UI Designs</p>
+                  <p>Wordpress Develope</p>
+                  <p class="pb">HTML v:2.0</p>
+                </div>
+                 <!-- platinum_mid end -->
+                 <!-- platinum_btm start -->
+                 <div class="silver_btm">
+                  <h4>Join Now</h4>
+                 </div>
+                 <!-- platinum_btm end -->
+              </div>
+            </div>
+            <!-- platinum part end -->
+          </div>
+        </div>
+      </section>
+      <!-- =========pricing part end ======= -->
+      <!-- =========clients part start ======= -->
+      <section id="clients">
+        <div class="clients_overlay">
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-2 offset-1">
+                <div class="client_item">
+                  <h4 class="counter">230</h4>
+                  <p>Total Clients</p>
+                </div>
+              </div>
+
+              <div class="col-lg-2">
+                <div class="client_item">
+                  <h4 class="counter">330</h4>
+                  <p>Satisfied Clients</p>
+                </div>
+              </div>
+
+              <div class="col-lg-2">
+                <div class="client_item">
+                  <h4 class="counter">130</h4>
+                  <p>Reviewed Client</p>
+                </div>
+              </div>
+
+              <div class="col-lg-2">
+                <div class="client_item">
+                  <h4 class="counter">430</h4>
+                  <p>Cup of Tea</p>
+                </div>
+              </div>
+
+              <div class="col-lg-2">
+                <div class="client_item">
+                  <h4 class="counter">530</h4>
+                  <p>Milestone Client</p>
+                </div>
+              </div>
+            </div>
+          </div>
+      </div>
+    </section>
+      <!-- =========clients part end ======= -->
+      <!-- =========Team part start ======= -->
+      <section id="team">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-8 m-auto">
+              <div class="service_head">
+                <div class="service_head_text">
+                  <h3>Our Team</h3>
+                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Loremsum has been the industry's standard dummy text ever since the 1500s.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-4">
               
             </div>
           </div>
         </div>
       </section>
-      <!-- =========about part end ======= -->
-    
+      <!-- =========Team part end ======= -->
+
+
 
 
 
     <script src="js/jquery-1.12.4.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/slick.min.js"></script>
+    <script src="js/waypoints.min.js"></script>
+    <script src="js/jquery.counterup.min.js"></script>
     <script src="js/custom.js"></script>
 </body>
 </html>
+
+
