--- a/index.html
+++ b/index.html
@@ -310,6 +310,7 @@
           </div>
            <!-- services slide start  -->
         </div>
+        </div>
       </section>
       <!-- =========services part end ======= -->
       <!-- =========pricing part sart ======= -->
