--- a/index.html
+++ b/index.html
@@ -481,14 +481,266 @@
               </div>
             </div>
           </div>
+
           <div class="row">
-            <div class="col-lg-4">
-              
+            <!-- ====team_iteams one start==== -->
+            <div class="col-lg-3">
+              <div class="team_iteams">
+                <div class="team_part">
+                  <!-- team img start  -->
+                  <div class="team_img">
+                    <img src="images/team_img_one.jpg" alt="team_img_one" class="w-100 img-fluid">
+                    <div class="team_img_olay">
+                      <div class="team_olay_icon">
+                        <i class="fa fa-search-plus"></i>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- team img end  -->
+                  <!-- team text start  -->
+                  <div class="team_text">
+                    <h4>Adreeta Nipa</h4>
+                    <p>Founder</p>
+                  </div>
+                   <!-- team text end  -->
+                </div>
+                <!-- team icons start  -->
+                <div class="team_icons">
+                  <a href="#"><i class="fa fa-facebook"></i></a>
+                  <a href="#"><i class="fa fa-twitter"></i></a>
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                  <a href="#"><i class="fa fa-behance"></i></a>
+                </div>
+                 <!-- team icons end  -->
+              </div>
             </div>
+            <!-- ====team_iteams one end==== -->
+            <!-- ====team_iteams two start==== -->
+            <div class="col-lg-3">
+              <div class="team_iteams">
+                <div class="team_part">
+                  <!-- team img start  -->
+                  <div class="team_img">
+                    <img src="images/team_img_two.jpg" alt="team_img_two" class="w-100 img-fluid">
+                    <div class="team_img_olay">
+                      <div class="team_olay_icon">
+                        <i class="fa fa-search-plus"></i>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- team img end  -->
+                  <!-- team text start  -->
+                  <div class="team_text">
+                    <h4>Ahsan Rana</h4>
+                    <p>Chairman</p>
+                  </div>
+                   <!-- team text end  -->
+                </div>
+                <!-- team icons start  -->
+                <div class="team_icons">
+                  <a href="#"><i class="fa fa-facebook"></i></a>
+                  <a href="#"><i class="fa fa-twitter"></i></a>
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                  <a href="#"><i class="fa fa-behance"></i></a>
+                </div>
+                 <!-- team icons end  -->
+              </div>
+            </div>
+            <!-- ====team_iteams two end==== -->
+            <!-- ====team_iteams three start==== -->
+            <div class="col-lg-3">
+              <div class="team_iteams">
+                <div class="team_part">
+                  <!-- team img start  -->
+                  <div class="team_img">
+                    <img src="images/team_img_three.jpg" alt="team_img_three" class="w-100 img-fluid">
+                    <div class="team_img_olay">
+                      <div class="team_olay_icon">
+                        <i class="fa fa-search-plus"></i>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- team img end  -->
+                  <!-- team text start  -->
+                  <div class="team_text">
+                    <h4>Nadia Rahman</h4>
+                    <p>Senior Member</p>
+                  </div>
+                   <!-- team text end  -->
+                </div>
+                <!-- team icons start  -->
+                <div class="team_icons">
+                  <a href="#"><i class="fa fa-facebook"></i></a>
+                  <a href="#"><i class="fa fa-twitter"></i></a>
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                  <a href="#"><i class="fa fa-behance"></i></a>
+                </div>
+                 <!-- team icons end  -->
+              </div>
+            </div>
+            <!-- ====team_iteams three end==== -->
+            <!-- ====team_iteams four start==== -->
+            <div class="col-lg-3">
+              <div class="team_iteams">
+                <div class="team_part">
+                  <!-- team img start  -->
+                  <div class="team_img">
+                    <img src="images/team_img_four.jpg" alt="team_img_four" class="w-100 img-fluid">
+                    <div class="team_img_olay">
+                      <div class="team_olay_icon">
+                        <i class="fa fa-search-plus"></i>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- team img end  -->
+                  <!-- team text start  -->
+                  <div class="team_text">
+                    <h4>Jhon Smith</h4>
+                    <p>Member</p>
+                  </div>
+                   <!-- team text end  -->
+                </div>
+                <!-- team icons start  -->
+                <div class="team_icons">
+                  <a href="#"><i class="fa fa-facebook"></i></a>
+                  <a href="#"><i class="fa fa-twitter"></i></a>
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                  <a href="#"><i class="fa fa-behance"></i></a>
+                </div>
+                 <!-- team icons end  -->
+              </div>
+            </div>
+            <!-- ====team_iteams four end==== -->
           </div>
         </div>
       </section>
       <!-- =========Team part end ======= -->
+      <!-- =========client part start ======= -->
+      <section id="client">
+        <div class="container">
+          <div class="row">
+            <!-- client one img start  -->
+            <div class="col-lg-2 offset-1">
+              <div class="client_one">
+                <img src="images/clinent_one.png" alt="client_one" class="w-100 img-fluid">
+              </div>
+            </div>
+            <!-- client one img end  -->
+            <!-- client two img start  -->
+            <div class="col-lg-2">
+              <div class="client_one">
+                <img src="images/client_two.png" alt="client_two" class="w-100 img-fluid">
+              </div>
+            </div>
+            <!-- client two img end  -->
+            <!-- client three img start  -->
+            <div class="col-lg-2">
+              <div class="client_one">
+                <img src="images/client_three.png" alt="client_three" class="w-100 img-fluid">
+              </div>
+            </div>
+            <!-- client three img end  -->
+            <!-- client four img start  -->
+            <div class="col-lg-2">
+              <div class="client_one">
+                <img src="images/client_four.png" alt="clinet_four" class="w-100 img-fluid">
+              </div>
+            </div>
+            <!-- client four img end  -->
+            <!-- client five img start  -->
+            <div class="col-lg-2">
+              <div class="client_one">
+                <img src="images/client_five.png" alt="client_five" class="w-100 img-fluid">
+              </div>
+            </div>
+            <!-- client five img end  -->
+          </div>
+        </div>
+      </section>
+      <!-- =========client part end ======= -->
+      <!-- =========logo part start ======= -->
+      <section id="logo_part">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-2 m-auto">
+              <div class="main_logo">
+                <img src="images/hunt_logo.png" alt="hunt_logo" class="w-100 img-fluid">
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- =========logo part end ======= -->
+      <!-- =========footer_top part start ======= -->
+      <section id="footer">
+        <div class="container">
+          <!-- footer part one start -->
+          <div class="row">
+            <!-- footer_item one start -->
+            <div class="col-lg-3">
+              <div class="footer_item fi_one text-center">
+                <a href="#"><i class="fa fa-map-marker"></i></a>
+                <p>1234, Parkstreet Avenue Newyork City, America.</p>
+              </div>
+            </div>
+            <!-- footer_item one end -->
+              <!-- footer_item two start -->
+            <div class="col-lg-3">
+              <div class="footer_item  text-center">
+                <a href="#"><i class="fa fa-phone"></i></a>
+                <p>+123 4567 8900, +123 0098 7654 +99 0712 36526, +99 3644 36842</p>
+              </div>
+            </div>
+              <!-- footer_item two end -->
+              <!-- footer_item three start -->
+            <div class="col-lg-3">
+              <div class="footer_item text-center">
+                <a href="#"><i class="fa fa-envelope"></i></a>
+                <p class="fit">hunt@admin.com, info@hunt.com personal-portfolio@hunt.com</p>
+              </div>
+            </div>
+              <!-- footer_item three end -->
+            <!-- footer_item four start -->
+            <div class="col-lg-3">
+              <div class="footer_item text-center">
+                <a href="#"><i class="fa fa-globe"></i></a>
+                <p>www.hunt-personal-port.com www.portfolio-hunt.com</p>
+              </div>
+            </div>
+              <!-- footer_item four end -->
+          </div>
+           <!-- footer part one end -->
+           <!-- footer part two start -->
+           <div class="row">
+            <div class="col-lg-12">
+              <div class="footer_btm_text">
+                <h4>Follow Us</h4>
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-pinterest-p"></i></a>
+                <a href="#"><i class="fa fa-linkedin"></i></a>
+                <a href="#"><i class="fa fa-behance"></i></a>
+              </div>
+            </div>
+            
+           </div>
+           <!-- footer part two end -->
+        </div>
+      </section>
+      <!-- =========footer_top part end ======= -->
+      <!-- ========= btm_footer part start ======= -->
+      <section id="btm_footer">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12 text-center">
+              <div class="btm_foot_text">
+                <p>Copyright <i class="fa fa-copyright"></i> 2017.All rights reserved by <span class="bft"><a href="#">HUNT.</a></span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- ========= btm_footer part end ======= -->
 
 
 
