--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <!-- google font end -->
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -747,10 +747,10 @@
 
 
     <script src="js/jquery-1.12.4.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/slick.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/waypoints.min.js"></script>
     <script src="js/jquery.counterup.min.js"></script>
+    <script src="js/slick.min.js"></script>
     <script src="js/custom.js"></script>
 </body>
 </html>
